# FedGB

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DATASETS.md  LICENSE  METHODS.md  NOTICE  README.md  REPRODUCIBILITY.md  pyproject.toml
configs/environment/: environment-linux-cu121.yml  requirements-linux-cu121.txt  verified-environment.json
datasets/: README.md
examples/: run_fgl_graph.py  run_fgl_hetero_subgraph.py  run_fgl_homo_subgraph.py  run_fl_graph.py  run_fl_hetero_subgraph.py  run_fl_homo_subgraph.py
fedgb/: __init__.py  legacy_config.py
fedgb/config/: __init__.py  dataset_manifest.json  datasets.py  (+4 more)
tests/: test_algorithm_imports.py  test_core_imports.py  test_credentialed_dataset_release.py  test_data_schema.py  test_dataset_archive_builder.py  test_dataset_manifest.py  test_dataset_normalization.py  test_dataset_validation.py  test_environment_contract.py  test_examples.py  test_fedlaw_graph_reg.py  test_graph_cls_server_split.py  test_masked_graph_reg.py  test_method_registry.py  test_no_dgl_imports.py  test_no_openfgl_imports.py  test_optimade_release_builder.py  test_paper_dataset_contract.py  test_processed_partition_paths.py  test_processed_subgraph_loader.py  test_public_dataset_preparation.py  test_public_entrypoint.py  test_public_release_cleanliness.py  test_readme_contract.py  test_release_audit.py  test_release_datasets.py  test_release_layout.py  test_release_loader.py  test_release_validation_summary.py  test_rgcn_factory.py  test_runtime_method_loader.py  test_smoke_matrix_definition.py  test_standard_fl_graph_reg_adapters.py
(+252 files in other folders)
